# diversity-compare

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
datasets/: README.md  align.sh  chunkify.sh  otu_clustering.sh  otu_table.py  place.sh  unchunkify.sh
datasets/hmp2/: epa.sh  papara.sh
datasets/hmp2/data/: .gitignore  chunkify.sh  extract.sh  get.sh  merge.sh
datasets/hmp2/place/: unchunkify.sh
evaluation/: bv_eval.r  eval.r
metrics/: bwpd.sh  guppy-fpd.sh  otu_div.r  scrapp.sh  scrapp_measures.sh
src/: jplace-diversity.cpp  scrapp-diversity.cpp
